# APEX-OmniHub

./: .env  .env.demo.example  .env.example  .env.sandbox.example  .gitignore  .trufflehog-exclude-paths.txt  .trufflehog.yaml  APEX-INTEGRATION-HUB-PROMPT.md  APEX_RECON_ENGINE_V2.html  APEX_RECON_SIM.html  APEX_RECON_SIM_DEMO.webm  ARMAGEDDON_TEST_SUITE_REPORT.md  AUDIT_INVESTIGATION_REPORT.md  AuthKey_THHMJ3J4LD.p8  BATTERY_TEST_REPORT.md  BLOCKCHAIN_CONFIG.md  BLOCKCHAIN_DEPLOYMENT_CHECKLIST.md  CHANGELOG.md  COST_OPTIMIZATION.md  CRITICAL_REFACTOR.md  ERRORS.md  ERRORS.txt  LAUNCH_READINESS.md  LICENSE  MIGRATION_NOTES.md  MONITORING_SETUP.md  Makefile  OMEGA_BRANCH_RESOLUTION.md  OMNILINK_APP_DEMO.webm  OMNILINK_HYBRID_CERTIFICATION.md  OMNILINK_MANIFESTO_LITE.md  OMNILINK_PORT_PROMPT_LITE.md  OPS_RENDER_FIX_NOTES.md  OPS_RUNBOOK.md  PRODUCTION_BLOCKERS_ANALYSIS.md  PWA_ICONS_SETUP.md  README.md  SECURITY_ADVISORIES.md  TECHNICAL_ARCHITECTURE_SPEC_WITH_WORKFLOW.md  TESTING_EVIDENCE.md  (+59 more)
.claude/: CLAUDE.md
.claude/skills/: apex-frontend.md  apex-master-debug-universal.md  apex-power.md  apex-support.md  pytest-skill.md  web-art-generator.md
.github/: PR_NATIVE_WRAPPER.md  SECURITY.md
.github/scripts/: check_system_usage.sh
.github/workflows/: cd-staging.yml  chaos-simulation-ci.yml  ci-runtime-gates.yml  ci.yml  compliance.yml  deploy-web3-functions.yml  nightly-evaluation.yml  orchestrator-ci.yml  production-readiness.yml  secret-scanning.yml  security-regression-guard.yml
apex-resilience/: README.md  SECURITY.md  index.ts
apex-resilience/config/: thresholds.ts
apex-resilience/core/: evidence-storage.ts  iron-law.ts  types.ts
apex-resilience/integrations/: temporal-hooks.ts
apex-resilience/scripts/: demo-verify.ts  (+2 more)
contracts/: APEXMembershipNFT.sol
docs/: ARCHITECTURAL_CONVERGENCE_REPORT.md  CI_RUNTIME_GATES.md  E2E_TEST_RESULTS.md  GDPR_WORKFLOWS.md  INCIDENT_RESPONSE.md  INFRASTRUCTURE_GAPS_AUDIT_REPORT.md  MAN_MODE_WORKFLOW_DIAGRAMS.md  OMNILINK_MOBILE_PWA.md  PRODUCTION_STATUS.md  README.md  SEMANTIC_TRANSLATOR_AUDIT.md  SEMANTIC_TRANSLATOR_SPEC.md  SYSTEM_PERFORMANCE_OPTIMIZATION_2026-01-30.md  TECH_SPEC_ARCHITECTURE.md  TERMS_OF_SERVICE.md  VOICE_FORTRESS_TELEMETRY_AUDIT.md  WEB3_VERIFICATION_RUNBOOK.md  omnilink-universal-plan.md  skill-forge-implementation.md  worldwide-wildcard-tests.md
e2e/: omnilink-mobile-pwa.spec.ts
local-agents/: .env.example  README.md  SECURITY.md  apex_sales_agent.py  benchmark_connector.py  lead_gen_agent.py  omnihub_connector.py  requirements.txt  verify_integration.sh
omega/: README.md  SECURITY_REVIEW.md  __init__.py  dashboard.py  engine.py  test_omega.sh
omnidev/: LICENSE.txt  SKILL.md
orchestrator/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAN_MODE.md  Makefile  README.md  SANDBOX.md  SEMANTIC_TRANSLATOR.md  TEMPORAL_MONITORING.md  TEST_RESULTS.md  config.py  docker-compose.yml  main.py  orchestrator_test_error.txt  pyproject.toml  requirements.in  requirements.txt  sandbox_test.py  test_output.txt
orchestrator/activities/: __init__.py  iron_law_verify.py  man_mode.py  notify_man_task.py  omni_policy.py  omnitrace_activities.py  tools.py
orchestrator/infrastructure/: cache.py  tidb_persistence.py
orchestrator/models/: __init__.py  audit.py  events.py  man_mode.py
orchestrator/observability/: __init__.py  omnitrace.py
orchestrator/omniboard/: __init__.py  fsm.py  router.py  service.py
orchestrator/omnilink/: __init__.py  scopes.py
orchestrator/policies/: man_policy.py
orchestrator/providers/database/: __init__.py  base.py  factory.py  supabase_provider.py
orchestrator/security/: __init__.py  omni_policy.py  prompt_sanitizer.py  request_signing.py  ssrf.py
orchestrator/services/: __init__.py  notifications.py
orchestrator/tests/: conftest.py  test_activities_security.py  test_audit_persistence.py  test_cache.py  test_chaos.py  test_database_provider_contract.py  test_final_verification.py  test_man_mode.py  test_man_mode_integration.py  test_models.py  test_notifications.py  test_omnilink_scopes.py  test_prompt_sanitizer.py  test_request_signing.py  test_ssrf.py  test_tidb_persistence.py  test_tool_validation.py
orchestrator/tests/omniboard/: test_fsm.py  test_router.py  test_service.py
orchestrator/workflows/: __init__.py  agent_saga.py
patent-validation/: .gitignore  README.md  evidence-utils.ts  generate-legal-package.ts  master-command.sh  run-all.ts  vitest.config.patent.ts
public/: manifest.webmanifest  offline.html  robots.txt  sw.js
sandbox/: README.md  chaotic-client-simulation.ts  run-simulation.cjs  simulation-results.json
scripts/: audit-features.ts  benchmark-apex.ts  benchmark-logger.ts  check-react-singleton.mjs  deploy-temporal.bat  deploy-web3-functions.sh  generate-apple-secret.ts  harden-docs.cjs  record_app_demo.ts  record_sim.ts  secret-scan.mjs  smoke-test.ts  validate-blockchain-env.sh
security/: npm-audit-latest.json  npm-audit-prod.json
sim/: README.md  chaos-engine.ts  circuit-breaker.ts  cli.ts  contracts.ts  eval-runner.ts  evidence.ts  idempotency.ts  metrics.ts  runner.ts  telemetry.ts
src/: App.tsx  index.css  main.tsx  middleware.ts  worker.ts
supabase/: config.toml
terraform/: README.md
tests/: agent-rag-test.ts  final-closure.test.ts  login-supabase-config.test.ts  omnilink-scopes.test.ts  setup.ts  ute.test.ts
(+1093 files in other folders)
