[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-orchestrator"
version = "0.1.0"
description = "AI Agent Orchestration Platform with Temporal.io, Event Sourcing, and Saga Patterns"
authors = [{name = "APEX Business Systems"}]
requires-python = ">=3.11"
dependencies = [
    # Web framework (required by main.py API server)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Temporal.io workflow engine
    "temporalio>=1.5.0",

    # Data validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Redis with vector search capabilities
    "redis[hiredis]>=5.0.0",
    "redis-om>=0.2.0",

    # LLM interface with instructor + litellm
    "instructor>=1.0.0",
    "litellm>=1.0.0",

    # Database
    "supabase>=2.3.0",
    "asyncpg>=0.29.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",

    # Embeddings for semantic cache
    "sentence-transformers>=2.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "infrastructure*", "workflows*", "activities*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable stricter rules for SonarQube A-grade
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
]

ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # assert usage (OK in tests)
    "T201",  # print usage (OK for fallback logging)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # assert is expected in pytest tests
  "S110",  # try-except-pass in chaos tests is intentional
  "S311",  # pseudo-random in tests is fine (not crypto)
]
"workflows/**/*.py" = [
  "C901",  # Complex workflow orchestration is expected
]
"main.py" = ["S104"]  # Allow 0.0.0.0 binding for container deployment

[tool.black]
line-length = 100
target-version = ["py311"]
